Prisma Schema ERD block

--- a/blocks.config.json
+++ b/blocks.config.json
@@ -1,20 +1,11 @@
 [
-  {
-    "type": "file",
-    "id": "file-block",
-    "title": "Example File Block",
-    "description": "A basic file block",
-    "entry": "blocks/example-file-block/index.tsx",
-    "matches": ["*"],
-    "example_path": "https://github.com/facebook/react/blob/main/packages/react-dom/index.js"
-  },
-  {
-    "type": "folder",
-    "id": "folder-block",
-    "title": "Example Folder Block",
-    "description": "A basic folder block",
-    "entry": "blocks/example-folder-block.tsx",
-    "matches": ["*"],
-    "example_path": "https://github.com/githubocto/flat"
-  }
+	{
+		"type": "file",
+		"id": "prisma-schema-erd",
+		"title": "Prisma Schema",
+		"description": "Visualize your Prisma database schema with an Entity Relationship Diagram (ERD).",
+		"entry": "blocks/prisma-schema-erd/index.tsx",
+		"matches": ["*.prisma"],
+		"example_path": "https://github.com/prisma/prisma-examples/blob/latest/javascript/rest-express/prisma/schema.prisma"
+	}
 ]
